# asr-app

./: .gitignore  pyproject.toml
src/asr_app/: app.py  io.py  progress.py  settings.py  texts.py  transcribe.py
