[tool.poetry]
name = "asr-app"
version = "0.1.0"
description = ""
authors = ["Łukasz Kopociński <lkopocinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.32.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
